--- a/custom/app.ini
+++ b/custom/app.ini
@@ -1,4 +1,4 @@
-RUN_MODE = dev
+RUN_MODE = prod
 HTTP_PORT = 5566
 
 [page]
@@ -9,8 +9,8 @@ LANGS = zh-CN
 NAMES = 简体中文
 
 [docs]
-TYPE = local
-TARGET = /Users/helei/devops-api.com
+TYPE = remote
+TARGET = https://github.com/chanyipiaomiao/devops-api.com
 SECRET = devops-api.com
 
 
@@ -25,7 +25,7 @@ DESC = devops-api 提供一些常用操作的HTTP API
 USE_CDN = true
 
 # 外部访问站点的 URL
-URL = http://localhost:5566
+URL = http://127.0.0.1:5566
 
 [navbar]
 -: home
